--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tareeahstore",
   "version": "0.1.0",
-  "homepage": "https://reareasoulfood.github.io/tareeahstore",
+  "homepage": "https://djarreau.github.io/tareeahstore",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
